[package]
name = "bitcoin-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = { git = "https://github.com/fiamma-chain/rust-bitcoincore-rpc", branch = "master", features = ["default"] }
bitcoin = { version = "0.32.5", features = ["rand-std", "serde"] }
anyhow = "1.0.97"
hex = "0.4.3"
log = "0.4.22"